--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "@openzeppelin-4.8.1": "https://github.com/OpenZeppelin/openzeppelin-contracts#4.8.1",
+    "@openzeppelin-upgrades-4.8.1": "https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable#4.8.1",
     "@openzeppelin/contracts": "2.5.1",
     "@uniswap/v2-core": "1.0.1",
     "bignumber.js": "^9.0.1",
